--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/L_Level_1.L_Level_1
 EditorStartupMap=/Game/Levels/L_Level_1.L_Level_1
+GlobalDefaultGameMode=/Game/Blueprints/Other/BP_CrustyPirateGameMode.BP_CrustyPirateGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
