--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Levels/L_Level_1.L_Level_1
 EditorStartupMap=/Game/Levels/L_Level_1.L_Level_1
 GlobalDefaultGameMode=/Game/Blueprints/Other/BP_CrustyPirateGameMode.BP_CrustyPirateGameMode_C
+GameInstanceClass=/Game/Blueprints/Other/BP_CrustyPirateGameInstance.BP_CrustyPirateGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
